changed two project screenshots to computer images, aligned project image/text side by side, and fixed nav bar border color issue

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 
 .nav {
   transition-duration: 1s;
+  border-color: transparent;
 }
 
 .round-img {
@@ -16,10 +17,6 @@
   max-height: 260px;
 }
 
-.projects-img {
-  max-width: 800px;
-  max-height: 800px;
-}
 
 .fa{
   color: white;
@@ -29,16 +26,34 @@
   text-align: center;
 }
 
+.projects-img.even {
+  width: 468px;
+  height: 387px;
+  float: left;
+  margin: 0 0 0 10px;
+}
+
+.projects-text.even {
+  margin: 0 0 0 600px;
+  width: 40vw;
+}
+
+.projects-img.odd {
+  width: 468px;
+  height: 387px;
+  float: right;
+  margin: 0 10px 0 0;
+}
+
+.projects-text.odd {
+  margin: 0 0 0 10px;
+  width: 40vw;
+}
+
 .projects-div {
   padding-top: 50px;
   padding-bottom: 50px;
   text-align: center;
-  max-width: 800px;
-  max-height: 800px;
-}
-
-.projects {
-  height: 1000px;
 }
 
 a.project-link {
@@ -138,7 +153,6 @@ a.project-link {
 @media (min-width: 768px) {
   .navbar-default {
     background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.3);
   }
   .navbar-default .navbar-header .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
